@@ -92,6 +92,10 @@ Problems corrected in Shorewall 4.2.1
     shorewall in some cases. Shorewall now detects when the new syntax
     is accepted and uses it instead.
 
+4)  The Shorewall-perl implementation of the LENGTH column in
+    /etc/shorewall/tcrules was incomplete with the result that 
+    all LENGTH rules matched. Thanks to Lennart Sorensen for the patch. 
+
 Other changes in Shorewall 4.2.1
 
 1)  With the recent renewed interest in DOS attacks, it seems
