@@ -10,4 +10,6 @@ Changes in Shorewall 4.2.1
 
 5) Add time match support.
 
+6) Applied Lennart Sorensen's patch for length match.
+
 Initial release of Shorewall 4.2.0.
